--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,8 @@
-aiohttp==3.7.4.post0
-async-timeout==3.0.1
-attrs==21.2.0
-beautifulsoup4==4.9.3
-bs4==0.0.1
-certifi==2020.12.5
-chardet==4.0.0
-click==8.0.1
-discord.py==1.7.2
-Flask==2.0.1
-idna==2.10
-itsdangerous==2.0.1
-Jinja2==3.0.1
-lxml==4.6.3
-MarkupSafe==2.0.1
-multidict==5.1.0
-parso==0.7.0
-pyzmq==20.0.0
 requests==2.25.1
-rope==0.19.0
-soupsieve==2.2.1
-typing-extensions==3.10.0.0
-urllib3==1.26.4
-Werkzeug==2.0.1
 xmltodict==0.12.0
-yarl==1.6.3
 aiohttp==3.7.4.post0
-async-timeout==3.0.1
-attrs==21.2.0
-autopep8==1.5.7
-backcall==0.2.0
-beautifulsoup4==4.9.3
-bs4==0.0.1
-certifi==2020.12.5
-chardet==4.0.0
-click==8.0.1
-colorama==0.4.4
-crayons==0.3.1
-decorator==5.0.9
-discord.py==1.7.2
 Flask==2.0.1
-idna==2.10
-ipykernel==5.3.4
-ipython==7.22.0
-ipython-genutils==0.2.0
-itsdangerous==2.0.1
-jedi==0.17.2
-Jinja2==3.0.1
-jupyter-client==6.1.12
-jupyter-core==4.7.1
-lxml==4.6.3
-MarkupSafe==2.0.1
-multidict==5.1.0
-parso==0.7.0
-pexpect==4.8.0
-pickleshare==0.7.5
-piexif==1.1.3
-Pillow==6.2.2
-pip==21.0.1
-prompt-toolkit==3.0.17
-ptyprocess==0.7.0
-pycodestyle==2.7.0
-Pygments==2.9.0
-python-dateutil==2.8.1
-pyzmq==20.0.0
-requests==2.25.1
-rope==0.19.0
-setuptools==52.0.0.post20210125
-six==1.15.0
-soupsieve==2.2.1
+discord.py==1.7.2
+beautifulsoup4==4.9.3
+discord==1.0.1
 stegano==0.9.8
-toml==0.10.2
-tornado==6.1
-traitlets==5.0.5
-typing-extensions==3.10.0.0
-urllib3==1.26.4
-wcwidth==0.2.5
-Werkzeug==2.0.1
-wheel==0.36.2
-xmltodict==0.12.0
-yarl==1.6.3
