--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,16 @@ services:
       - ./logs:/usr/src/app/logs
       - ./museum.py:/usr/src/app/museum.py
 
+  nginx:
+    image: 'jc21/nginx-proxy-manager:latest'
+    restart: unless-stopped
+    ports:
+      - 80:80
+      - 81:81
+      - 443:443
+    volumes:
+      - ../data:/data
+      - ../letsencrypt:/etc/letsencrypt
   
 
 
